[package]
name = "reward-pool"
version = "0.1.0"
description = "simple reward pool for SPL token"
authors = ["Jesse Liu <freezy.gem0918@outlook.com>"]
repository = "https://github.com/fzgem18/reward-pool.git"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9.2"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.9.2"

[lib]
crate-type = ["cdylib", "lib"]
